src/test/deca/context/invalid/resultats/test7_op_comp-cont.res
./src/test/deca/context/invalid/test7_op_comp.deca:17:1: Cannot compare string types.
